--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1615,7 +1615,7 @@ footer {
         position: relative;
         justify-content: space-evenly;
         background-color: $bg-secondary;
-        z-index: -1;
+        //z-index: -1;
 
         &--hidden {
             display: block;
